# microphone-library-for-pico

./: CMakeLists.txt
examples/anavi_dev_mic/: CMakeLists.txt  anavi_dev_mic.c  main.c  usb_descriptors.c
